# whereami

./: Cargo.toml  Dockerfile  README.md
colourschemes/: gunmetal
db/: init.sql
src/: main.rs  repository.rs
ui/: README.md  package-lock.json  package.json
whereami-ui/: app.vue  nuxt.config.ts  package-lock.json  package.json
whereami-ui/components/: Globe.vue  MyMap.vue
whereami-ui/plugins/: vue3-openlayers.client.js
