[package]
name = "whereami"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_postgres = "0.2.0"
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.2"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
